--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "moment": "^2.22.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-responsive-modal": "^3.5.0",
+    "react-ionicons": "^2.1.6",
+    "react-responsive-modal": "^3.5.1",
     "recompose": "^0.30.0",
     "shortid": "^2.2.14",
     "styled-components": "^4.0.3"
@@ -32,6 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "gatsby-plugin-root-import": "^2.0.4",
     "prettier": "1.15.2"
   }
 }
