Typography.js added

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "gatsby": "^2.0.33",
+    "gatsby-plugin-offline": "^2.0.18",
+    "gatsby-plugin-typography": "^2.2.2",
     "grommet": "^2.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
@@ -21,9 +23,12 @@
     "react-dom": "^16.5.1",
     "react-ionicons": "^2.1.6",
     "react-responsive-modal": "^3.5.1",
+    "react-typography": "^0.16.13",
     "recompose": "^0.30.0",
     "shortid": "^2.2.14",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "typography": "^0.16.17",
+    "typography-theme-fairy-gates": "^0.15.11"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
